--- a/arch/arm/configs/cm_viskan_huashan_defconfig
+++ b/arch/arm/configs/cm_viskan_huashan_defconfig
@@ -583,6 +583,8 @@ CONFIG_CRYPTO_DEV_QCE=m
 CONFIG_CRYPTO_DEV_QCEDEV=m
 CONFIG_CRC_CCITT=y
 CONFIG_NFC_PN544=y
+CONFIG_OVERCLOCK=y
+CONFIG_IKCONFIG_PROC=y
 
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_CUBIC=y
