F2fs mess. Needs to be reverted

--- a/arch/arm/configs/cm_viskan_huashan_defconfig
+++ b/arch/arm/configs/cm_viskan_huashan_defconfig
@@ -586,6 +586,9 @@ CONFIG_NFC_PN544=y
 CONFIG_OVERCLOCK=y
 CONFIG_IKCONFIG_PROC=y
 
+CONFIG_SOUND_CONTROL_HAX_GPL=y
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
+
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_TCP_CONG_WESTWOOD=y
