--- a/arch/arm/configs/cm_viskan_huashan_defconfig
+++ b/arch/arm/configs/cm_viskan_huashan_defconfig
@@ -22,6 +22,11 @@ CONFIG_SW_SYNC=y
 # CONFIG_PID_NS is not set
 # CONFIG_NET_NS is not set
 CONFIG_BLK_DEV_INITRD=y
+CONFIG_ZRAM=y
+CONFIG_ZRAM_LZ4_COMPRESS=y
+# CONFIG_ZRAM_DEBUG is not set
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
 CONFIG_RD_BZIP2=y
 CONFIG_RD_LZMA=y
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
@@ -254,11 +259,8 @@ CONFIG_GENLOCK_MISCDEVICE=y
 CONFIG_CMA=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
-<<<<<<< HEAD
-=======
 CONFIG_ZSMALLOC=y
 CONFIG_PGTABLE_MAPPING=y
->>>>>>> parent of 24d027a... Revert "Enable page table mapping for zsmalloc"
 CONFIG_UID_STAT=y
 CONFIG_HAPTIC_ISA1200=y
 CONFIG_PMIC8XXX_VIBRATOR=y
@@ -578,7 +580,7 @@ CONFIG_SECURITY_SELINUX_DISABLE=y
 CONFIG_SECURITY_SELINUX_DEVELOP=y
 CONFIG_SECURITY_SELINUX_AVC_STATS=y
 CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1 
-CONFIG_CMDLINE="enforcing=0"
+CONFIG_CMDLINE="enforcing=1"
 CONFIG_CMDLINE_EXTEND=y
 CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_XCBC=y
