--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -126,6 +126,18 @@ config CPU_FREQ_DEFAULT_GOV_SMARTASSV2
 	select CPU_FREQ_GOV_SMARTASSV2
 	help
 		Use the CPUFreq governor 'smartassV2' as default.
+	  
+config CPU_FREQ_DEFAULT_GOV_LAGFREE
+        bool "lagfree"
+        select CPU_FREQ_GOV_LAGFREE
+        select CPU_FREQ_GOV_PERFORMANCE
+        help
+          Use the CPUFreq governor 'lagfree' as default. This allows
+          you to get a full dynamic frequency capable system by simply
+          loading your cpufreq low-level hardware driver.
+          Be aware that not all cpufreq drivers support the lagfree
+          governor. If unsure have a look at the help section of the
+          driver. Fallback governor will be the performance governor.
 
 config CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND2
 	bool "intellidemand2"
@@ -150,24 +162,29 @@ config CPU_FREQ_DEFAULT_GOV_INTELLIMM
           Use the CPUFreq governor 'intelliminmax' as default. This is
           governor will use only 3 different frequencies, idle, UI and max
 
+config CPU_FREQ_DEFAULT_GOV_BRAZILIANWAX
+	bool "brazilianwax"
+	select CPU_FREQ_GOV_BRAZILIANWAX
+	help
+		Use the CPUFreq governor 'brazilianwax' as default.
+
 config CPU_FREQ_DEFAULT_GOV_HYPER
 	bool "HYPER"
 	select CPU_FREQ_GOV_HYPER
 	help
 		Use the CPUFreq governor 'HYPER' as default.
 
-config CPU_FREQ_DEFAULT_GOV_STOCKDEMAND
-	bool "stockdemand"
-	select CPU_FREQ_GOV_STOCKDEMAND
-	select CPU_FREQ_GOV_PERFORMANCE
+config CPU_FREQ_DEFAULT_GOV_INTERACTIVEX
+	bool "interactivex"
+	select CPU_FREQ_GOV_INTERACTIVEX
 	help
-	  Use the CPUFreq governor 'stockdemand' as default. This allows
-	  you to get a full dynamic frequency capable system by simply
-	  loading your cpufreq low-level hardware driver.
-	  Be aware that not all cpufreq drivers support the ondemand
-	  governor. If unsure have a look at the help section of the
-	  driver. Fallback governor will be the performance governor.
-	  This is default LG ondemand cpu gov.
+		Use the CPUFreq governor 'interactivex' as default.
+
+config CPU_FREQ_DEFAULT_GOV_LULZACTIVEQ
+	bool "lulzactiveq"
+	select CPU_FREQ_GOV_LULZACTIVEQ
+	help
+		Use the CPUFreq governor 'lulzactiveq' as default.
 
 config CPU_FREQ_DEFAULT_GOV_PEGASUSQ
 	bool "pegasusq"
@@ -175,47 +192,35 @@ config CPU_FREQ_DEFAULT_GOV_PEGASUSQ
 	help
 		Use the CPUFreq governor 'pegasusq' as default.
 
+config CPU_FREQ_DEFAULT_GOV_SAKURACTIVE
+	bool "sakuractive"
+	select CPU_FREQ_GOV_SAKURACTIVE
+	help
+		Use the CPUFreq governor 'sakuractive' as default.
+
+config CPU_FREQ_DEFAULT_GOV_SAVAGEDZEN
+	bool "savagedzen"
+	select CPU_FREQ_GOV_SAVAGEDZEN
+	help
+		Use the CPUFreq governor 'savagedzen' as default.
+
+config CPU_FREQ_DEFAULT_GOV_SCARY
+	bool "scary"
+	select CPU_FREQ_GOV_SCARY
+	help
+		Use the CPUFreq governor 'scary' as default.
+
 config CPU_FREQ_DEFAULT_GOV_NIGHTMARE
 	bool "nightmare"
 	select CPU_FREQ_GOV_NIGHTMARE
 	help
-
-config CPU_FREQ_DEFAULT_GOV_DARKNESS
-	bool "darkness"
-	select CPU_FREQ_GOV_DARKNESS
-	help
-
-config CPU_FREQ_DEFAULT_GOV_ALUCARD
-	bool "alucard"
-	select CPU_FREQ_GOV_ALUCARD
-	help
-
-config CPU_FREQ_DEFAULT_GOV_YANKACTIVE
-	bool "yankactive"
-	select CPU_FREQ_GOV_YANKACTIVE
-	help
-	  Use the CPUFreq governor 'yankactive' as default. This allows
-	  you to get a full dynamic cpu frequency capable system by simply
-	  loading your cpufreq low-level hardware driver, using the
-	  'yankactive' governor for latency-sensitive workloads.
+		Use the CPUFreq governor 'nightmare' as default.
 
 config CPU_FREQ_DEFAULT_GOV_HYBRID
 	bool "hybrid"
 	select CPU_FREQ_GOV_HYBRID
 	help
 		Use the CPUFreq governor 'hybrid' as default.
-
-config CPU_FREQ_DEFAULT_GOV_ZZMOOVE
-	bool "zzmoove"
-	select CPU_FREQ_GOV_ZZMOOVE
-	help
-		Use the CPUFreq governor 'zzmoove' as default.
-
-config CPU_FREQ_DEFAULT_GOV_IMPULSE
-	bool "impulse"
-	select CPU_FREQ_GOV_IMPULSE
-	help
-	  Use the CPUFreq governor 'interactive' as default.
 
 endchoice
 
@@ -291,12 +296,6 @@ config CPU_FREQ_GOV_INTERACTIVE
 
 	  If in doubt, say N.
 
-config CPU_FREQ_GOV_STOCKDEMAND
-	tristate "'stockdemand' cpufreq policy governor"
-	select CPU_FREQ_TABLE
-	help
-	  this is stock LG ondemand GOV. for users that like STOCK.
-
 config CPU_FREQ_GOV_ONDEMANDPLUS
 	tristate "'ondemandplus' cpufreq policy governor"
 	select CPU_FREQ_TABLE
@@ -337,7 +336,6 @@ config CPU_FREQ_GOV_CONSERVATIVE
 	  For details, take a look at linux/Documentation/cpu-freq.
 
 	  If in doubt, say N.
-
 config CPU_FREQ_GOV_SMARTASSV2
 	tristate "'smartassV2' cpufreq governor"
 	depends on CPU_FREQ
@@ -345,6 +343,25 @@ config CPU_FREQ_GOV_SMARTASSV2
 		'smartassV2' - a "smart" governor
 		If in doubt, say N.
 
+		
+config CPU_FREQ_GOV_LAGFREE
+        tristate "'lagfree' cpufreq governor"
+        depends on CPU_FREQ
+        help
+          'lagfree' - this driver is rather similar to the 'ondemand'
+          governor both in its source code and its purpose, the difference is
+          its optimisation for better suitability in a battery powered
+          environment.  The frequency is gracefully increased and decreased
+          rather than jumping to 100% when speed is required.
+
+          To compile this driver as a module, choose M here: the
+          module will be called cpufreq_lagfree.
+
+          For details, take a look at linux/Documentation/cpu-freq.
+
+          If in doubt, say N.
+
+          
 config CPU_FREQ_GOV_LIONHEART
   	tristate "'lionheart' cpufreq governor"
   	depends on CPU_FREQ
@@ -388,17 +405,13 @@ config CPU_FREQ_GOV_INTELLIMM
 
           If in doubt, say N.
 
-config CPU_FREQ_GOV_NIGHTMARE
-	tristate "'nightmare' cpufreq governor"
+config CPU_FREQ_GOV_BRAZILIANWAX
+	tristate "'brazilianwax' cpufreq governor"
 	depends on CPU_FREQ
+	help
+	  'brazilianwax' governor.
 
-config CPU_FREQ_GOV_DARKNESS
-	tristate "'darkness' cpufreq governor"
-	depends on CPU_FREQ
-
-config CPU_FREQ_GOV_ALUCARD
-	tristate "'alucard' cpufreq governor"
-	depends on CPU_FREQ
+	  If in doubt, say N.
 
 config CPU_FREQ_GOV_HYPER
 	tristate "'HYPER' cpufreq governor"
@@ -416,11 +429,51 @@ config CPU_FREQ_GOV_INTERACTIVEX
 
 	  If in doubt, say N.
 
+config CPU_FREQ_GOV_LULZACTIVEQ
+	tristate "'lulzactiveq' cpufreq governor"
+	depends on CPU_FREQ
+	help
+	  'lulzactiveq' governor.
+
+	  If in doubt, say N.
+
 config CPU_FREQ_GOV_PEGASUSQ
 	tristate "'pegasusq' cpufreq governor"
 	depends on CPU_FREQ
 	help
 	  'pegasusq' governor.
+
+	  If in doubt, say N.
+
+config CPU_FREQ_GOV_SAKURACTIVE
+	tristate "'sakuractive' cpufreq governor"
+	depends on CPU_FREQ
+	help
+	  'sakuractive' governor.
+
+	  If in doubt, say N.
+
+config CPU_FREQ_GOV_SAVAGEDZEN
+	tristate "'savagedzen' cpufreq governor"
+	depends on CPU_FREQ
+	help
+	  'savagedzen' governor.
+
+	  If in doubt, say N.
+
+config CPU_FREQ_GOV_SCARY
+	tristate "'scary' cpufreq governor"
+	depends on CPU_FREQ
+	help
+	  'scary' governor.
+
+	  If in doubt, say N.
+
+config CPU_FREQ_GOV_NIGHTMARE
+	tristate "'nightmare' cpufreq governor"
+	depends on CPU_FREQ
+	help
+	  'nightmare' governor.
 
 	  If in doubt, say N.
 
@@ -431,30 +484,6 @@ config CPU_FREQ_GOV_HYBRID
 	  'hybrid' governor.
 
 	  If in doubt, say N.
-
-config CPU_FREQ_GOV_IMPULSE
-	tristate "'impulse' cpufreq policy governor"
-	help
-	  'impulse' - This driver adds a dynamic cpufreq policy governor
-	  designed for optimized balance between power and performance.
-
-	  If in doubt, say N.
-
-config CPU_FREQ_GOV_YANKACTIVE
-	tristate "'yankactive' cpufreq policy governor"
-	help
-	  'yankactive' - This driver adds a dynamic cpufreq policy governor
-	  designed for latency-sensitive workloads.
-	  The governor is based on interactive with just different default settings
-	  and can be achieved using interactive with a script. This is added for
-	  simplification purposes for myself.
-
-config CPU_FREQ_GOV_ZZMOOVE
-	tristate "'zzmoove' cpufreq governor"
-	depends on CPU_FREQ
-	help
-	'zzmoove' - a "zzmoove" governor
-	If in doubt, say N.
 
 menu "x86 CPU frequency scaling drivers"
 depends on X86
