--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -126,18 +126,6 @@ config CPU_FREQ_DEFAULT_GOV_SMARTASSV2
 	select CPU_FREQ_GOV_SMARTASSV2
 	help
 		Use the CPUFreq governor 'smartassV2' as default.
-	  
-config CPU_FREQ_DEFAULT_GOV_LAGFREE
-        bool "lagfree"
-        select CPU_FREQ_GOV_LAGFREE
-        select CPU_FREQ_GOV_PERFORMANCE
-        help
-          Use the CPUFreq governor 'lagfree' as default. This allows
-          you to get a full dynamic frequency capable system by simply
-          loading your cpufreq low-level hardware driver.
-          Be aware that not all cpufreq drivers support the lagfree
-          governor. If unsure have a look at the help section of the
-          driver. Fallback governor will be the performance governor.
 
 config CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND2
 	bool "intellidemand2"
@@ -162,11 +150,11 @@ config CPU_FREQ_DEFAULT_GOV_INTELLIMM
           Use the CPUFreq governor 'intelliminmax' as default. This is
           governor will use only 3 different frequencies, idle, UI and max
 
-config CPU_FREQ_DEFAULT_GOV_BRAZILIANWAX
-	bool "brazilianwax"
-	select CPU_FREQ_GOV_BRAZILIANWAX
+config CPU_FREQ_DEFAULT_GOV_YANKACTIVE
+	bool "yankactive"
+	select CPU_FREQ_GOV_YANKACTIVE
 	help
-		Use the CPUFreq governor 'brazilianwax' as default.
+		Use the CPUFreq governor 'yankactive' as default.
 
 config CPU_FREQ_DEFAULT_GOV_HYPER
 	bool "HYPER"
@@ -174,17 +162,11 @@ config CPU_FREQ_DEFAULT_GOV_HYPER
 	help
 		Use the CPUFreq governor 'HYPER' as default.
 
-config CPU_FREQ_DEFAULT_GOV_INTERACTIVEX
-	bool "interactivex"
-	select CPU_FREQ_GOV_INTERACTIVEX
+config CPU_FREQ_DEFAULT_GOV_NIGHTMARE
+	bool "nightmare"
+	select CPU_FREQ_GOV_NIGHTMARE
 	help
-		Use the CPUFreq governor 'interactivex' as default.
-
-config CPU_FREQ_DEFAULT_GOV_LULZACTIVEQ
-	bool "lulzactiveq"
-	select CPU_FREQ_GOV_LULZACTIVEQ
-	help
-		Use the CPUFreq governor 'lulzactiveq' as default.
+		Use the CPUFreq governor 'nightmare' as default.
 
 config CPU_FREQ_DEFAULT_GOV_PEGASUSQ
 	bool "pegasusq"
@@ -192,35 +174,17 @@ config CPU_FREQ_DEFAULT_GOV_PEGASUSQ
 	help
 		Use the CPUFreq governor 'pegasusq' as default.
 
-config CPU_FREQ_DEFAULT_GOV_SAKURACTIVE
-	bool "sakuractive"
-	select CPU_FREQ_GOV_SAKURACTIVE
+config CPU_FREQ_DEFAULT_GOV_DARKNESS
+	bool "darkness"
+	select CPU_FREQ_GOV_DARKNESS
 	help
-		Use the CPUFreq governor 'sakuractive' as default.
+		Use the CPUFreq governor 'darkness' as default.
 
-config CPU_FREQ_DEFAULT_GOV_SAVAGEDZEN
-	bool "savagedzen"
-	select CPU_FREQ_GOV_SAVAGEDZEN
+config CPU_FREQ_DEFAULT_GOV_ALUCARD
+	bool "alucard"
+	select CPU_FREQ_GOV_ALUCARD
 	help
-		Use the CPUFreq governor 'savagedzen' as default.
-
-config CPU_FREQ_DEFAULT_GOV_SCARY
-	bool "scary"
-	select CPU_FREQ_GOV_SCARY
-	help
-		Use the CPUFreq governor 'scary' as default.
-
-config CPU_FREQ_DEFAULT_GOV_NIGHTMARE
-	bool "nightmare"
-	select CPU_FREQ_GOV_NIGHTMARE
-	help
-		Use the CPUFreq governor 'nightmare' as default.
-
-config CPU_FREQ_DEFAULT_GOV_HYBRID
-	bool "hybrid"
-	select CPU_FREQ_GOV_HYBRID
-	help
-		Use the CPUFreq governor 'hybrid' as default.
+		Use the CPUFreq governor 'alucard' as default.
 
 endchoice
 
@@ -342,25 +306,6 @@ config CPU_FREQ_GOV_SMARTASSV2
 	help
 		'smartassV2' - a "smart" governor
 		If in doubt, say N.
-
-		
-config CPU_FREQ_GOV_LAGFREE
-        tristate "'lagfree' cpufreq governor"
-        depends on CPU_FREQ
-        help
-          'lagfree' - this driver is rather similar to the 'ondemand'
-          governor both in its source code and its purpose, the difference is
-          its optimisation for better suitability in a battery powered
-          environment.  The frequency is gracefully increased and decreased
-          rather than jumping to 100% when speed is required.
-
-          To compile this driver as a module, choose M here: the
-          module will be called cpufreq_lagfree.
-
-          For details, take a look at linux/Documentation/cpu-freq.
-
-          If in doubt, say N.
-
           
 config CPU_FREQ_GOV_LIONHEART
   	tristate "'lionheart' cpufreq governor"
@@ -405,14 +350,6 @@ config CPU_FREQ_GOV_INTELLIMM
 
           If in doubt, say N.
 
-config CPU_FREQ_GOV_BRAZILIANWAX
-	tristate "'brazilianwax' cpufreq governor"
-	depends on CPU_FREQ
-	help
-	  'brazilianwax' governor.
-
-	  If in doubt, say N.
-
 config CPU_FREQ_GOV_HYPER
 	tristate "'HYPER' cpufreq governor"
 	depends on CPU_FREQ
@@ -421,19 +358,19 @@ config CPU_FREQ_GOV_HYPER
 
 	  If in doubt, say N.
 
-config CPU_FREQ_GOV_INTERACTIVEX
-	tristate "'interactivex' cpufreq governor"
+config CPU_FREQ_GOV_ALUCARD
+	tristate "'alucard' cpufreq governor"
 	depends on CPU_FREQ
 	help
-	  'interactivex' governor.
+	  'alucard' governor.
 
 	  If in doubt, say N.
 
-config CPU_FREQ_GOV_LULZACTIVEQ
-	tristate "'lulzactiveq' cpufreq governor"
+config CPU_FREQ_GOV_DARKNESS
+	tristate "'darkness' cpufreq governor"
 	depends on CPU_FREQ
 	help
-	  'lulzactiveq' governor.
+	  'darkness' governor.
 
 	  If in doubt, say N.
 
@@ -445,27 +382,11 @@ config CPU_FREQ_GOV_PEGASUSQ
 
 	  If in doubt, say N.
 
-config CPU_FREQ_GOV_SAKURACTIVE
-	tristate "'sakuractive' cpufreq governor"
+config CPU_FREQ_GOV_YANKACTIVE
+	tristate "'yankactive' cpufreq governor"
 	depends on CPU_FREQ
 	help
-	  'sakuractive' governor.
-
-	  If in doubt, say N.
-
-config CPU_FREQ_GOV_SAVAGEDZEN
-	tristate "'savagedzen' cpufreq governor"
-	depends on CPU_FREQ
-	help
-	  'savagedzen' governor.
-
-	  If in doubt, say N.
-
-config CPU_FREQ_GOV_SCARY
-	tristate "'scary' cpufreq governor"
-	depends on CPU_FREQ
-	help
-	  'scary' governor.
+	  'yankactive' governor.
 
 	  If in doubt, say N.
 
