--- a/arch/arm/configs/cm_viskan_huashan_defconfig
+++ b/arch/arm/configs/cm_viskan_huashan_defconfig
@@ -1,6 +1,6 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="-Tangerine-9.0"
+CONFIG_LOCALVERSION="-Tangerine-9.1"
 CONFIG_KERNEL_XZ=y
 CONFIG_DEFAULT_HOSTNAME="XperiaSP"
 CONFIG_SYSVIPC=y
@@ -60,6 +60,9 @@ CONFIG_MSM_IPC_ROUTER_HSIC_XPRT=y
 CONFIG_MSM_IPC_ROUTER_SECURITY=y
 CONFIG_OVERCLOCK=y
 CONFIG_CPU_VOLTAGE_TABLE=y
+CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
+CONFIG_MSM_CPU_FREQ_MAX=1728000
+CONFIG_MSM_CPU_FREQ_MIN=384000
 CONFIG_INTELLI_PLUG=y
 CONFIG_MSM_AVS_HW=y
 # CONFIG_MSM_HW3D is not set
@@ -564,6 +567,7 @@ CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_F2FS_FS=y
 CONFIG_F2FS_FS_SECURITY=y
+CONFIG_F2FS_CHECK_FS=y
 CONFIG_CIFS=y
 CONFIG_CIFS_STATS=y
 CONFIG_CIFS_STATS2=y
@@ -587,11 +591,16 @@ CONFIG_ENABLE_DEFAULT_TRACERS=y
 CONFIG_DYNAMIC_DEBUG=y
 CONFIG_DEBUG_USER=y
 CONFIG_PID_IN_CONTEXTIDR=y
+CONFIG_KEYS=y
+CONFIG_ENCRYPTED_KEYS=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
 CONFIG_LSM_MMAP_MIN_ADDR=4096
 CONFIG_SECURITY_SELINUX=y
 CONFIG_CRYPTO_NULL=y
+CONFIG_CRYPTO_CTR=y
+CONFIG_CRYPTO_CTS=y
+CONFIG_CRYPTO_XTS=y
 CONFIG_CRYPTO_XCBC=y
 CONFIG_CRYPTO_SHA1_ARM=y
 CONFIG_CRYPTO_AES_ARM=y
