--- a/arch/arm/configs/cm_viskan_huashan_defconfig
+++ b/arch/arm/configs/cm_viskan_huashan_defconfig
@@ -106,6 +106,7 @@ CONFIG_SCHED_MC=y
 CONFIG_PREEMPT=y
 CONFIG_AEABI=y
 CONFIG_HIGHMEM=y
+CONFIG_HIGHMEM_DEFER=y
 CONFIG_COMPACTION=y
 CONFIG_KSM=y
 CONFIG_CC_STACKPROTECTOR=y
